@@ -1,3 +1,7 @@
+Alpha 4.2.4 - 19th Devember 2020
+
+- Fix for an incorrectly invalid save when parsing required liquid counts for production management
+
 Alpha 4.2.3 - 24th November 2020
 
 - Fixed a crash when deconstructing a wall that was not constructed
